Nuevos tooltips en todas las vistas. Alineado al centro el datatables_empty. Tocadas algunas fixtures.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -279,6 +279,9 @@ table a:hover {
 .pagination {
     font-size: 12px !important;
 }
+.dataTables_empty {
+    text-align: center !important;
+}
 /* NAVBAR PADDING FOR COLLAPSABLE COL-SM DEVICES */
 .nav > li > a {
     padding-left: 5px;
