--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -77,7 +77,7 @@
             {% for troop in player.troops if troop.quantity > 0 %}
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-{{ troop.unit.faction.class }}">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Cantidad de unidades de la tropa">[{{ troop.quantity|nf }}]</span></div>
                     <div class="panel-body text-responsive">
                         <div class="row">
                             <div class="col-xs-4">
@@ -85,16 +85,16 @@
                             </div>
                             <div class="col-xs-8 text-padded">
                                 {# row #}
-                                <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i>{{ troop.unit.attack|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ troop.unit.defense|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.unit.speed|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Ataque total de la tropa">{{ (troop.unit.attack * troop.quantity)|nf }}</span></div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Defensa total de la tropa">{{ (troop.unit.defense * troop.quantity)|nf }}</span></div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Velocidad de la tropa">{{ troop.unit.speed|nf }}</span></div>
                                 {# row #}
-                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ (troop.unit.goldMaintenance * troop.quantity)|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ (troop.unit.peopleMaintenance * troop.quantity)|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ (troop.unit.manaMaintenance * troop.quantity)|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Oro al turno">{{ (troop.unit.goldMaintenance * troop.quantity)|nf }}</span></div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Personas al turno">{{ (troop.unit.peopleMaintenance * troop.quantity)|nf }}</span></div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Maná al turno">{{ (troop.unit.manaMaintenance * troop.quantity)|nf }}</span></div>
                                 {# row #}
-                                <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ troop.unit.family.name }}</div>
-                                <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ troop.unit.type.name }}</div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Familia de la tropa">{{ troop.unit.family.name }}</span></div>
+                                <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Tipo de la tropa">{{ troop.unit.type.name }}</span></div>
                                 {# row #}
                                 {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div> #}
                                 {# row #}
@@ -123,7 +123,7 @@
             {% for contract in player.contracts %}
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-{{ contract.hero.faction.class }}">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a> <i class="fa fa-fw fa-star"></i>{{ contract.level }}</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Nivel del Héroe"><i class="fa fa-fw fa-star"></i>{{ contract.level }}</span></div>
                     <div class="panel-body text-responsive">
                         <div class="row">
                             <div class="col-xs-4">
@@ -131,9 +131,9 @@
                             </div>
                             <div class="col-xs-8 text-padded">
                                 {# row #}
-                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ (contract.level * contract.hero.goldMaintenance)|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ (contract.level * contract.hero.manaMaintenance)|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Oro al turno por nivel">{{ (contract.level * contract.hero.goldMaintenance)|nf }}</span></div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Personas al turno por nivel">{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</span></div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Maná al turno por nivel">{{ (contract.level * contract.hero.manaMaintenance)|nf }}</span></div>
                                 {# row #}
                                 <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ contract.hero.skill.description|raw }}</div>
                                 {# row #}
