--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -32,7 +32,7 @@
         {% for unit in units %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ unit.name|slug }}" class="link">{{ unit.name }}</a> [{{ player.hasUnit(unit).quantity|default(0)|nf }}] <small>({{ max(player.construction('Barracones').quantity,1)|nf }}/<i class="fa fa-fw fa-hourglass-half"></i>)</small></div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ unit.name|slug }}" class="link">{{ unit.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Cantidad de tropas que posees">[{{ player.hasUnit(unit).quantity|default(0)|nf }}]</span> <span data-toggle="tooltip" data-placement="top" title="Cantidad de tropas reclutadas por turno">({{ max(player.construction('Barracones').quantity,1)|nf }}/<i class="fa fa-fw fa-hourglass-half"></i>)</span></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -40,18 +40,18 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i>{{ unit.attack|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ unit.defense|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ unit.speed|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Ataque de la tropa">{{ unit.attack|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Defensa de la tropa">{{ unit.defense|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Velocidad de la tropa">{{ unit.speed|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i>{{ unit.goldRecruit|nf }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Coste de Oro por tropa">{{ unit.goldRecruit|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ unit.goldMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ unit.peopleMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ unit.manaMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Oro al turno por tropa">{{ unit.goldMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Personas al turno por tropa">{{ unit.peopleMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Maná al turno por tropa">{{ unit.manaMaintenance|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ unit.family.name }}</div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ unit.type.name }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Familia de la tropa">{{ unit.family.name }}</span></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Tipo de la tropa">{{ unit.type.name }}</span></div>
                             {# row #}
                             {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div> #}
                             {# row #}
