--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -13,14 +13,14 @@
             <div class="row">
                 <div class="col-xs-12 col-md-offset-3 col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading text-center">{{ (player.goldResourcePerTurn * 2)|nf }} <span class="label label-extra">Oro/Turno</span></div>
+                        <div class="panel-heading text-center">{{ (player.goldResourcePerTurn * 2)|nf }} Oro/Turno</div>
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-4">
                                     <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                                 </div>
                                 <div class="col-xs-8 text-padded">
-                                    <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de <span class="label label-extra">Oro</span> rápidamente.</div>
+                                    <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> en aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de <span class="label label-extra">Oro</span> rápidamente.</div>
                                 </div>
                             </div>
                         </div>
