--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/guild.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> y activar un <span class="label label-extra">Artefacto</span> sobre tu Reino o un Reino enemigo. Al igual que con los Hechizos, puede que no consigas traspasar su <span class="label label-extra">Defensa Mágica</span>, suma de sus <span class="label label-extra">Barreras</span> y sus Encantamientos defensivos.</div>
+                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> en activar un <span class="label label-extra">Artefacto</span> sobre tu Reino o un enemigo. Al igual que con los Hechizos, debes traspasar la <span class="label label-extra">Defensa Mágica</span> del objetivo. Colocar un Artefacto de batalla en defensa cuesta 1 <span class="label label-extra">Turno</span>.</div>
                         </div>
                     </div>
                 </div>
