--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -18,7 +18,7 @@
         <div class="col-xs-12 col-md-6">
             {% endif %}
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-home"></i><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a> [{{ construction.quantity|nf }}] {% if not loop.first %}<small>({{ ((player.construction('Talleres').quantity + 1) / construction.building.buildingratio)|round(0, 'ceil') }}/<i class="fa fa-fw fa-hourglass-half"></i>)</small>{% endif %}</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-home"></i><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Edificios que posees actualmente">[{{ construction.quantity|nf }}]</span> {% if not loop.first %}<span data-toggle="tooltip" data-placement="top" title="Edificios construidos por turno">({{ ((player.construction('Talleres').quantity + 1) / construction.building.buildingratio)|round(0, 'ceil') }}/<i class="fa fa-fw fa-hourglass-half"></i>)</span>{% endif %}</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -26,26 +26,26 @@
                         </div>
                         {% if loop.first %}
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes invertir <span class="label label-extra">Turnos</span>, <span class="label label-extra">Tierras</span>, <span class="label label-extra">Población</span> y <span class="label label-extra">Oro</span> en construir edificios. Las cifras muestran <span class="label label-primary">coste</span>, <span class="label label-success">recurso</span> por turno, <span class="label label-danger">mantenimiento</span> por turno, y aumento de recurso <span class="label label-info">máximo</span>. Cuantos más <span class="label label-extra">Talleres</span> tengas, más rápido construirás.</div>
+                            <div class="col-xs-12">Aquí puedes invertir <span class="label label-extra">Turnos</span>, <span class="label label-extra">Tierras</span>, <span class="label label-extra">Población</span> y <span class="label label-extra">Oro</span> en construir edificios, los cuales aumentarán la productividad de tu Reino. Cuantos más <span class="label label-extra">Talleres</span> tengas, más rápido construirás.</div>
                         </div>
                         {% else %}
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-primary" data-toggle="tooltip" data-placement="top" title="Coste de Oro por edificio">-{{ construction.building.goldCost|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-primary" data-toggle="tooltip" data-placement="top" title="Coste de Personas por edificio">-{{ construction.building.peopleCost|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-primary" data-toggle="tooltip" data-placement="top" title="Coste de Maná por edificio">-{{ construction.building.manaCost|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Coste de Oro por edificio">-{{ construction.building.goldCost|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Coste de Personas por edificio">-{{ construction.building.peopleCost|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Coste de Maná por edificio">-{{ construction.building.manaCost|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-success" data-toggle="tooltip" data-placement="top" title="Cantidad de Oro por edificio al turno">+{{ construction.building.goldResource|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-success" data-toggle="tooltip" data-placement="top" title="Cantidad de Personas por edificio al turno">+{{ construction.building.peopleResource|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-success" data-toggle="tooltip" data-placement="top" title="Cantidad de Maná por edificio al turno">+{{ construction.building.manaResource|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Cantidad de Oro ganado al turno por edificio">+{{ construction.building.goldResource|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Cantidad de Personas ganadas al turno por edificio">+{{ construction.building.peopleResource|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Cantidad de Maná ganado al turno por edificio">+{{ construction.building.manaResource|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-danger" data-toggle="tooltip" data-placement="top" title="Coste de Oro por edificio al turno">-{{ construction.building.goldMaintenance|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-danger" data-toggle="tooltip" data-placement="top" title="Coste de Personas por edificio al turno">-{{ construction.building.peopleMaintenance|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-danger" data-toggle="tooltip" data-placement="top" title="Coste de Maná por edificio al turno">-{{ construction.building.manaMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Cantidad de Oro gastado al turno por edificio">-{{ construction.building.goldMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Cantidad de Personas gastadas al turno por edificio">-{{ construction.building.peopleMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Cantidad de Maná gastado al turno por edificio">-{{ construction.building.manaMaintenance|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-info" data-toggle="tooltip" data-placement="top" title="Aumento de almacenamiento de Oro por edificio">+{{ construction.building.goldCap|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-info" data-toggle="tooltip" data-placement="top" title="Aumento de almacenamiento de Personas por edificio">+{{ construction.building.peopleCap|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-info" data-toggle="tooltip" data-placement="top" title="Aumento de almacenamiento de Maná por edificio">+{{ construction.building.manaCap|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Aumento de capacidad de Oro por edificio">+{{ construction.building.goldCap|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Aumento de capacidad de Personas por edificio">+{{ construction.building.peopleCap|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Aumento de capacidad de Maná por edificio">+{{ construction.building.manaCap|nf }}</span></div>
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ construction.building.description|raw }}</div>
                         </div>
