--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -13,14 +13,14 @@
             <div class="row">
                 <div class="col-xs-12 col-md-offset-3 col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading text-center">{{ player.freePerTurn|nf }} <span class="label label-extra">Tierras/Turno</span></div>
+                        <div class="panel-heading text-center">{{ player.freePerTurn|nf }} Tierras/Turno</div>
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-4">
                                     <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/territory.jpg') }}">
                                 </div>
                                 <div class="col-xs-8 text-padded">
-                                    <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y encontrar más <span class="label label-extra">Tierras</span> libres que añadir a tu reino para construir edificios. Cuantas menos tierras tengas, más encontrarás al explorar, y viceversa, hasta 3500.</div>
+                                    <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y encontrar más <span class="label label-extra">Tierras</span> libres que añadir a tu reino para construir edificios. Cuantas menos tierras tengas, más encontrarás al explorar, y viceversa, hasta las 3500.</div>
                                 </div>
                             </div>
                         </div>
